--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,6 @@
         
 
         <a id="documents-tab" class="nav-item nav-link" href="../documents" onclick="updatePage('/documents/')">Documents</a>
-        <a id="username" class="nav-item nav-link"></a>
         <a id="login-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button" onclick="resetHighlights()">Login</a>
         <a id="logout-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/" onclick="logout();resetHighlights();" role="button">Logout</a>
     </div>
@@ -102,40 +101,46 @@
 
                         <div class="fade-container row">
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/wpi-iqp.jpg" alt="">
-                                        <h4>WPI Project Presentations</h4>
-                                        <h6>Dec 7</h6>
+                                <a href="events" onclick="updatePage(/events/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/dummy/wpi-iqp.jpg" alt="">
+                                            <h4>WPI Project Presentations</h4>
+                                            <h6>Dec 7, Dec 10</h6>
+                                        </div>
+                                        <div class="back">
+                                            <p>On Friday December 7th and Monday December 10th, the WPI Venice IQP teams will present their projects to advisors and invited guests in the apse of the church. It will take place over two days, with presentations starting at 16:00 on each day.</p>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/dj-party.jpg" alt="">
-                                        <h4>DJ Dance Party</h4>
-                                        <h6>Dec 15</h6>
+                                <a href="events" onclick="updatePage(/events/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/italis.jpeg" alt="">
+                                            <h4>Italis Event</h4>
+                                            <h6>Dec 13</h6>
+                                        </div>
+                                        <div class="back">
+                                            <p>A day long seminar commencing the beginning of Food Team grant for SerenDPT. It will cover techniques in soil study and have a social brunch in the afternoon. To celebrate the completion of the Venice IQP, a dance party will be hosted afterwards for students and friends to attend. A DJ will play music and aperitifs will be served in the evening.</p>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/farmbot.jpg" alt="">
-                                        <h4>Farm-bot Hackathon</h4>
-                                        <h6>Jan 7</h6>
+                                <a href="events" onclick="updatePage(/events/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/dummy/farmbot.jpg" alt="">
+                                            <h4>Farm-bot Hackathon</h4>
+                                            <h6>Jan 7</h6>
+                                        </div>
+                                        <div class="back">
+                                            <p>An hackathon is an event where participants work on quick solutions to problems. This event will have hackers working on various farmbot prototypes for the hydroponics system in H3.</p>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -145,37 +150,56 @@
 
                         <div class="fade-container row">
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/Overhead Event.jpeg" alt="">
-                                        <h4>Main Hall</h4>
+                                <a href="spaces" onclick="updatePage(/spaces/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/dummy/Overhead Event.jpeg" alt="">
+                                            <h4>Main Hall</h4>
+                                        </div>
+                                        <div class="back">
+                                            <h4>Main Hall</h4>
+                                            <ul>
+                                                <li>80 square meters</li>
+                                                <li>50€ hourly rate</li>
+                                                <li>350€ daily rate</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/Conference Room.jpeg" alt="">
-                                        <h4>Conference Room</h4>
+                                <a href="spaces" onclick="updatePage(/spaces/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/dummy/Conference Room.jpeg" alt="">
+                                            <h4>General Room</h4>
+                                        </div>
+                                        <div class="back">
+                                            <h4>General Room</h4>
+                                            <ul>
+                                                <li>30 square meters</li>
+                                                <li>25€ hourly rate</li>
+                                                <li>180€ daily rate</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/Courtyard.jpeg" alt="">
-                                        <h4>Courtyard</h4>
+                                <a href="spaces" onclick="updatePage(/spaces/)">
+                                    <div class="flipper">
+                                        <div class="front">
+                                            <img class="card-image" src="img/dummy/Courtyard.jpeg" alt="">
+                                            <h4>Courtyard</h4>
+                                        </div>
+                                        <div class="back">
+                                            <h4>Courtyard</h4>
+                                            <ul>
+                                                <li>Closed for the winter</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -186,7 +210,7 @@
                         <div class="parallax-text">
                             <h2>Our History</h2>
                             <p>Discover our journey from the beginning</p>
-                            <a class="btn btn-light my-2 my-sm-0" href="history" role="button">Learn More</a>
+                            <a class="btn btn-light my-2 my-sm-0" href="history" role="button" onclick="updatePage(/history/)">Learn More</a>
                         </div>
                     </div>
 
@@ -265,7 +289,6 @@
 
 <script src="../js/main.js" type="text/javascript"></script>
 <script src="../js/events.js" type="text/javascript"></script>
-<script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/nav.js" type="text/javascript"></script>
 <script src="../js/eventform.js" type="text/javascript"></script>
